tests/positive/pr118c_binary_named_type.safe
package pr118c_binary_named_type

   type byte is binary (8)

   zero : byte = byte (0)
   full : byte = byte (255)

