tests/negative/neg_pr1113a_payload_default.safe
package neg_pr1113a_payload_default

   type shape is circle (radius : integer = 0) or idle
